--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ ipdb = "0.13.9"
 marshmallow = "3.18.0"
 pytest = "7.1.3"
 sqlalchemy-serializer = "1.4.1"
+flask-cors = "3.0.10"
 
 [requires]
 python_full_version = "3.8.13"
